--- a/app/home.html
+++ b/app/home.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="fonts/fonts.css">
     <link href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
-    <title>Adel</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
+    <title>SignumCity</title>
   </head>
   <body>
     <div class="loader-outer">
@@ -39,7 +40,32 @@
     <div class="content-wrapper" id="contentWrapper">
       <div class="page-wrapper" id="pageWrapper">
         <header class="header">
-          <div class="header__topline"></div>
+          <div class="container">
+            <div class="header__logo"><a class="header__link" href="#"><img src="img/svg/logo.svg"></a></div>
+            <nav class="header__nav">
+              <ul class="header__ul">
+                <li class="header__li"><a class="header__link" href="#">About Us</a></li>
+                <li class="header__li"><a class="header__link" href="#">Easy Money</a></li>
+                <li class="header__li"><a class="header__link" href="#">Testimonials</a></li>
+              </ul>
+            </nav>
+            <div class="socials"><a class="socials__link" href=""><img src="img/svg/twitter.svg"></a><a class="socials__link" href=""><img src="img/svg/facebook.svg"></a><a class="socials__link" href=""><img src="img/svg/insta.svg"></a><a class="socials__link" href=""><img src="img/svg/ufo.svg"></a></div>
+          </div>
+          <div class="people">
+            <div class="container">
+              <div class="people__title-outer">
+                <h1 class="people__h1">Play the Virtual Stock Market Win College Money</h1>
+                <h2 class="people__h2">  Win scholarship money or loan repayment Beginning May 2019, 100% Free - no catch</h2>
+                <h3 class="people__h3"> Win scholarship money or loan repayment Beginning May 2019, 100% Free - no catch</h3>
+                <form class="join">
+                  <input type="email" placeholder="Email">
+                  <button type="submit">JOIN the Wait List</button>
+                  <p class="form__text">We don’t spam you, but will alert you when starting awesome contests</p>
+                </form>
+              </div>
+              <div class="people__img"><img src="img/svg/People-with-money.svg"></div>
+            </div>
+          </div>
         </header>
       </div>
       <div class="footer-wrapper" id="footerWrapper">
