--- a/app/home.html
+++ b/app/home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="fonts/fonts.css">
     <link href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
     <title>SignumCity</title>
   </head>
   <body>
@@ -41,32 +41,57 @@
       <div class="page-wrapper" id="pageWrapper">
         <header class="header">
           <div class="container">
-            <div class="header__logo"><a class="header__link" href="#"><img src="img/svg/logo.svg"></a></div>
-            <nav class="header__nav">
-              <ul class="header__ul">
-                <li class="header__li"><a class="header__link" href="#">About Us</a></li>
-                <li class="header__li"><a class="header__link" href="#">Easy Money</a></li>
-                <li class="header__li"><a class="header__link" href="#">Testimonials</a></li>
-              </ul>
-            </nav>
-            <div class="socials"><a class="socials__link" href=""><img src="img/svg/twitter.svg"></a><a class="socials__link" href=""><img src="img/svg/facebook.svg"></a><a class="socials__link" href=""><img src="img/svg/insta.svg"></a><a class="socials__link" href=""><img src="img/svg/ufo.svg"></a></div>
-          </div>
-          <div class="people">
-            <div class="container">
+            <div class="header__wrapper">
+              <div class="header__logo"><a class="header__link" href="#"><img src="img/svg/logo.svg"></a></div>
+              <nav class="header__nav">
+                <ul class="header__ul">
+                  <li class="header__li"><a class="header__link" href="#">About Us</a></li>
+                  <li class="header__li"><a class="header__link" href="#">Easy Money</a></li>
+                  <li class="header__li"><a class="header__link" href="#">Testimonials</a></li>
+                </ul>
+              </nav>
+              <div class="socials"><a class="socials__link" href=""><img src="img/svg/twitter.svg"></a><a class="socials__link" href=""><img src="img/svg/facebook.svg"></a><a class="socials__link" href=""><img src="img/svg/insta.svg"></a><a class="socials__link" href=""><img src="img/svg/ufo.svg"></a></div>
+              <nav class="mob__nav">
+                <ul class="header__ul">
+                  <li class="header__li"><a class="header__link" href="#">About Us</a></li>
+                  <li class="header__li"><a class="header__link" href="#">Easy Money</a></li>
+                  <li class="header__li"><a class="header__link" href="#">Testimonials</a></li>
+                </ul>
+                <div class="socials"><a class="socials__link" href=""><img src="img/svg/twitter.svg"></a><a class="socials__link" href=""><img src="img/svg/facebook.svg"></a><a class="socials__link" href=""><img src="img/svg/insta.svg"></a><a class="socials__link" href=""><img src="img/svg/ufo.svg"></a></div>
+              </nav>
+            </div>
+            <div class="people">
               <div class="people__title-outer">
-                <h1 class="people__h1">Play the Virtual Stock Market Win College Money</h1>
+                <h1 class="people__h1">| Play the Virtual<br>Stock Market<br>Win College Money</h1>
                 <h2 class="people__h2">  Win scholarship money or loan repayment Beginning May 2019, 100% Free - no catch</h2>
-                <h3 class="people__h3"> Win scholarship money or loan repayment Beginning May 2019, 100% Free - no catch</h3>
-                <form class="join">
-                  <input type="email" placeholder="Email">
-                  <button type="submit">JOIN the Wait List</button>
-                  <p class="form__text">We don’t spam you, but will alert you when starting awesome contests</p>
+                <h3 class="people__h3"> Education is expensive. We want to help. Join the wait list and get 10,000 virtual dollars in your trading account.</h3>
+                <form class="form">
+                  <input class="form__input" type="email" placeholder="Email">
+                  <button class="form__btn" type="submit">JOIN the Wait List</button>
                 </form>
+                <p class="people__text">We don’t spam you, but will alert you when starting awesome contests</p>
               </div>
               <div class="people__img"><img src="img/svg/People-with-money.svg"></div>
             </div>
           </div>
         </header>
+        <section class="about">
+          <div class="container">
+            <div class="about__wrapper">
+              <div class="about__img"><img src="img/svg/People-with-light.svg"></div>
+              <div class="about__outer">
+                <div class="about__title">ABOUT US</div>
+                <p class="about__text">We're a bunch of fintech coders who think you should be able to play with fake money to win real money for college. And we figured out how to do that with sponsored contests.</p>
+                <p class="about__text">We aim to create the largest ongoing scholarship giveaway in history.</p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="easy-money">
+          <div class="container">
+            <div class="easy-money-wrapper"></div>
+          </div>
+        </section>
       </div>
       <div class="footer-wrapper" id="footerWrapper">
         <footer></footer>
