--- a/app/home.html
+++ b/app/home.html
@@ -65,9 +65,9 @@
                 <h1 class="people__h1">| Play the Virtual<br>Stock Market<br>Win College Money</h1>
                 <h2 class="people__h2">  Win scholarship money or loan repayment Beginning May 2019, 100% Free - no catch</h2>
                 <h3 class="people__h3"> Education is expensive. We want to help. Join the wait list and get 10,000 virtual dollars in your trading account.</h3>
-                <form class="form">
-                  <input class="form__input" type="email" placeholder="Email">
-                  <button class="form__btn" type="submit">JOIN the Wait List</button>
+                <form class="header__form">
+                  <input class="header__form-input" type="email" placeholder="Email">
+                  <button class="header__form-btn" type="submit">JOIN the Wait List</button>
                 </form>
                 <p class="people__text">We don’t spam you, but will alert you when starting awesome contests</p>
               </div>
@@ -89,7 +89,31 @@
         </section>
         <section class="easy-money">
           <div class="container">
-            <div class="easy-money-wrapper"></div>
+            <div class="easy-money__wrapper">
+              <h1 class="easy-money__title">EASY Money</h1>
+              <div class="easy-money__item-outer">
+                <div class="easy-money__item"><img src="img/svg/Sing-up.svg">
+                  <div class="easy-money__item-title">Sign Up</div>
+                  <div class="easy-money__item-text">Only your name, email and screen name, we never “Facebook” you</div>
+                </div>
+                <div class="easy-money__item"><img src="img/svg/Play.svg">
+                  <div class="easy-money__item-title">Play</div>
+                  <div class="easy-money__item-text">Unleash your inner Warren Buffet playing our dynamic games</div>
+                </div>
+                <div class="easy-money__item"><img src="img/svg/Win.svg">
+                  <div class="easy-money__item-title">Win</div>
+                  <div class="easy-money__item-text">Tell us where to send the “crap tons” of money if you wi</div>
+                </div>
+              </div>
+              <div class="easy-money__form">
+                <h2 class="easy-money__form-h2">| No boring scholarship essay!<br>Play stock investing games to win!</h2>
+                <form class="easy__form">
+                  <input class="easy__form-input" type="email" placeholder="Email">
+                  <button class="easy__form-btn" type="submit">JOIN the Wait List</button>
+                  <p class="easy__form-text">Hmm, still considering joining? We promise that we don’t bite, and we’ve had all our shots.</p>
+                </form>
+              </div>
+            </div>
           </div>
         </section>
       </div>
