--- a/app/home.html
+++ b/app/home.html
@@ -42,7 +42,9 @@
         <header class="header">
           <div class="container">
             <div class="header__wrapper">
-              <div class="header__logo"><a class="header__link" href="#"><img src="img/svg/logo.svg"></a></div>
+              <div class="header__logo"><a class="header__link" href="#"><img src="img/svg/logo.svg"></a>
+                <div class="header__menu"><img src="img/svg/Menu.svg"></div>
+              </div>
               <nav class="header__nav">
                 <ul class="header__ul">
                   <li class="header__li"><a class="header__link" href="#">About Us</a></li>
@@ -51,14 +53,21 @@
                 </ul>
               </nav>
               <div class="socials"><a class="socials__link" href=""><img src="img/svg/twitter.svg"></a><a class="socials__link" href=""><img src="img/svg/facebook.svg"></a><a class="socials__link" href=""><img src="img/svg/insta.svg"></a><a class="socials__link" href=""><img src="img/svg/ufo.svg"></a></div>
-              <nav class="mob__nav">
-                <ul class="header__ul">
-                  <li class="header__li"><a class="header__link" href="#">About Us</a></li>
-                  <li class="header__li"><a class="header__link" href="#">Easy Money</a></li>
-                  <li class="header__li"><a class="header__link" href="#">Testimonials</a></li>
-                </ul>
-                <div class="socials"><a class="socials__link" href=""><img src="img/svg/twitter.svg"></a><a class="socials__link" href=""><img src="img/svg/facebook.svg"></a><a class="socials__link" href=""><img src="img/svg/insta.svg"></a><a class="socials__link" href=""><img src="img/svg/ufo.svg"></a></div>
-              </nav>
+            </div>
+            <div class="header__wrapper-mob">
+              <div class="header__mob">
+                <div class="header__logo-mob"><a class="header-mob__link" href="#"><img src="img/svg/logo.svg"></a>
+                  <div class="header-mob__link_close"><img src="img/svg/Close.svg"></div>
+                </div>
+                <nav class="header__mob-nav">
+                  <ul class="header__mob-ul">
+                    <li class="header__mob-li"><a class="header__mob-link" href="#">About Us</a></li>
+                    <li class="header__mob-li"><a class="header__mob-link" href="#">Easy Money</a></li>
+                    <li class="header__mob-li"><a class="header__mob-link" href="#">Testimonials</a></li>
+                  </ul>
+                  <div class="socials-mob"><a class="socials-mob__link" href=""><img src="img/svg/twitter.svg"></a><a class="socials-mob__link" href=""><img src="img/svg/facebook.svg"></a><a class="socials-mob__link" href=""><img src="img/svg/insta.svg"></a><a class="socials-mob__link" href=""><img src="img/svg/ufo.svg"></a></div>
+                </nav>
+              </div>
             </div>
             <div class="people">
               <div class="people__title-outer">
@@ -80,7 +89,7 @@
             <div class="about__wrapper">
               <div class="about__img"><img src="img/svg/People-with-light.svg"></div>
               <div class="about__outer">
-                <div class="about__title">ABOUT US</div>
+                <div class="about__title">About us</div>
                 <p class="about__text">We're a bunch of fintech coders who think you should be able to play with fake money to win real money for college. And we figured out how to do that with sponsored contests.</p>
                 <p class="about__text">We aim to create the largest ongoing scholarship giveaway in history.</p>
               </div>
@@ -90,7 +99,7 @@
         <section class="easy-money">
           <div class="container">
             <div class="easy-money__wrapper">
-              <h1 class="easy-money__title">EASY Money</h1>
+              <h1 class="easy-money__title">Easy Money</h1>
               <div class="easy-money__item-outer">
                 <div class="easy-money__item"><img src="img/svg/Sing-up.svg">
                   <div class="easy-money__item-title">Sign Up</div>
@@ -116,9 +125,94 @@
             </div>
           </div>
         </section>
+        <section class="testimonials">
+          <div class="container">
+            <div class="testimonials__wrapper">
+              <h1 class="testimonials__h1">Testimonials</h1>
+              <div class="testimonials__title">Don't believe us? Well listen to our beta testers:</div>
+              <div class="testimonials__items">
+                <div class="testimonials__items-outer">
+                  <div class="testimonials__item">
+                    <div class="testimonials__item-img"><img src="img/svg/Hamilton.svg"></div>
+                    <div class="testimonials__item-texts">
+                      <div class="testimonials__item-title">Alexander Hamilton</div>
+                      <div class="testimonials__item-text">Signum City was easy to play, easy to sign up, and they aren't trying to sell me anything, -ever. It is the funnest way to get money for college</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="testimonials__items-outer">
+                  <div class="testimonials__item">
+                    <div class="testimonials__item-img"><img src="img/svg/Buddha.svg"></div>
+                    <div class="testimonials__item-texts">
+                      <div class="testimonials__item-title">Buddha</div>
+                      <div class="testimonials__item-text">Getting scholarship money doesn't have to be suffering, Signum City makes it fun to win scholarships with your friends.</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="testimonials__items-outer">
+                  <div class="testimonials__item">
+                    <div class="testimonials__item-img"><img src="img/svg/Polo.svg"></div>
+                    <div class="testimonials__item-texts">
+                      <div class="testimonials__item-title">Marco Polo</div>
+                      <div class="testimonials__item-text">No need to travel and beg for college money, just sign up for Signum City and start playing now!</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="testimonials__items-outer">
+                  <div class="testimonials__item">
+                    <div class="testimonials__item-img"><img src="img/svg/Peter.svg"></div>
+                    <div class="testimonials__item-texts">
+                      <div class="testimonials__item-title">Saint Peter</div>
+                      <div class="testimonials__item-text">For the love of all things holy, Signum City is making it actually exciting and fun to win scholarship money for college.</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="testimonials__items-outer">
+                  <div class="testimonials__item">
+                    <div class="testimonials__item-img"><img src="img/svg/Peter2.svg"></div>
+                    <div class="testimonials__item-texts">
+                      <div class="testimonials__item-title">Saint Peter</div>
+                      <div class="testimonials__item-text">For the love of all things holy, Signum City is making it actually exciting and fun to win scholarship money for college.</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="testimonials__text">Of course, none of these people actually said any of this, but we think they would. Signum City is all this, and more.</div>
+            </div>
+          </div>
+        </section>
+        <section class="laptop">
+          <div class="container">
+            <div class="laptop__wrapper">
+              <div class="laptop__texts">
+                <div class="laptop__texts-text">Please don’t make us beg, although<br>we’re not beneath that.</div>
+                <div class="laptop__texts-text">You know you want those $10,000 virtual dollars.</div>
+                <form class="laptop__form">
+                  <input class="laptop__form-input" type="email" placeholder="Email">
+                  <button class="laptop__form-btn" type="submit">JOIN the Wait List</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
       <div class="footer-wrapper" id="footerWrapper">
-        <footer></footer>
+        <footer class="footer">
+          <div class="container">
+            <div class="footer__wrapper">
+              <nav class="header__nav">
+                <ul class="header__ul">
+                  <li class="header__li"><a class="header__link" href="#">Start Page</a></li>
+                  <li class="header__li"><a class="header__link" href="#">About Us</a></li>
+                  <li class="header__li"><a class="header__link" href="#">Easy Money</a></li>
+                  <li class="header__li"><a class="header__link" href="#">Testimonials</a></li>
+                </ul>
+              </nav>
+              <div class="socials footer-soc"><a class="socials__link" href=""><img src="img/svg/twitter.svg"></a><a class="socials__link" href=""><img src="img/svg/facebook.svg"></a><a class="socials__link" href=""><img src="img/svg/insta.svg"></a><a class="socials__link" href=""><img src="img/svg/ufo.svg"></a></div>
+              <div class="copyright">© 2019 All Rights Reserved</div><a class="btn-up" href="header"><img src="img/svg/btn-up.svg"></a>
+            </div>
+          </div>
+        </footer>
       </div>
     </div>
     <script src="js/libs.min.js"></script>
