--- a/app/home.html
+++ b/app/home.html
@@ -71,7 +71,7 @@
             </div>
             <div class="people">
               <div class="people__title-outer">
-                <h1 class="people__h1">| Play the Virtual<br>Stock Market<br>Win College Money</h1>
+                <h1 class="people__h1">Play the Virtual<br>Stock Market<br>Win College Money</h1>
                 <h2 class="people__h2">  Win scholarship money or loan repayment Beginning May 2019, 100% Free - no catch</h2>
                 <h3 class="people__h3"> Education is expensive. We want to help. Join the wait list and get 10,000 virtual dollars in your trading account.</h3>
                 <form class="header__form">
@@ -115,72 +115,33 @@
                 </div>
               </div>
               <div class="easy-money__form">
-                <h2 class="easy-money__form-h2">| No boring scholarship essay!<br>Play stock investing games to win!</h2>
-                <form class="easy__form">
-                  <input class="easy__form-input" type="email" placeholder="Email">
-                  <button class="easy__form-btn" type="submit">JOIN the Wait List</button>
+                <h2 class="easy-money__form-h2">No boring scholarship essay!<br>Play stock investing games to win!</h2>
+                <div class="easy__form-outer">
+                  <form class="easy__form">
+                    <input class="easy__form-input" type="email" placeholder="Email">
+                    <button class="easy__form-btn" type="submit">JOIN the Wait List</button>
+                  </form>
                   <p class="easy__form-text">Hmm, still considering joining? We promise that we don’t bite, and we’ve had all our shots.</p>
-                </form>
+                </div>
               </div>
             </div>
           </div>
         </section>
-        <section class="testimonials">
-          <div class="container">
-            <div class="testimonials__wrapper">
-              <h1 class="testimonials__h1">Testimonials</h1>
-              <div class="testimonials__title">Don't believe us? Well listen to our beta testers:</div>
-              <div class="testimonials__items">
-                <div class="testimonials__items-outer">
-                  <div class="testimonials__item">
-                    <div class="testimonials__item-img"><img src="img/svg/Hamilton.svg"></div>
-                    <div class="testimonials__item-texts">
-                      <div class="testimonials__item-title">Alexander Hamilton</div>
-                      <div class="testimonials__item-text">Signum City was easy to play, easy to sign up, and they aren't trying to sell me anything, -ever. It is the funnest way to get money for college</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="testimonials__items-outer">
-                  <div class="testimonials__item">
-                    <div class="testimonials__item-img"><img src="img/svg/Buddha.svg"></div>
-                    <div class="testimonials__item-texts">
-                      <div class="testimonials__item-title">Buddha</div>
-                      <div class="testimonials__item-text">Getting scholarship money doesn't have to be suffering, Signum City makes it fun to win scholarships with your friends.</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="testimonials__items-outer">
-                  <div class="testimonials__item">
-                    <div class="testimonials__item-img"><img src="img/svg/Polo.svg"></div>
-                    <div class="testimonials__item-texts">
-                      <div class="testimonials__item-title">Marco Polo</div>
-                      <div class="testimonials__item-text">No need to travel and beg for college money, just sign up for Signum City and start playing now!</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="testimonials__items-outer">
-                  <div class="testimonials__item">
-                    <div class="testimonials__item-img"><img src="img/svg/Peter.svg"></div>
-                    <div class="testimonials__item-texts">
-                      <div class="testimonials__item-title">Saint Peter</div>
-                      <div class="testimonials__item-text">For the love of all things holy, Signum City is making it actually exciting and fun to win scholarship money for college.</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="testimonials__items-outer">
-                  <div class="testimonials__item">
-                    <div class="testimonials__item-img"><img src="img/svg/Peter2.svg"></div>
-                    <div class="testimonials__item-texts">
-                      <div class="testimonials__item-title">Saint Peter</div>
-                      <div class="testimonials__item-text">For the love of all things holy, Signum City is making it actually exciting and fun to win scholarship money for college.</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="testimonials__text">Of course, none of these people actually said any of this, but we think they would. Signum City is all this, and more.</div>
-            </div>
-          </div>
-        </section>
+        <!--section.testimonials-->
+        <!--    .container-->
+        <!--        .testimonials__wrapper-->
+        <!--            h1.testimonials__h1 Testimonials-->
+        <!--            .testimonials__title Don't believe us? Well listen to our beta testers:-->
+        <!--            .testimonials__items-->
+        <!--                each item in links-->
+        <!--                    .testimonials__items-outer-->
+        <!--                        .testimonials__item-->
+        <!--                            .testimonials__item-img-->
+        <!--                                img(src=item.img)-->
+        <!--                            .testimonials__item-texts-->
+        <!--                                .testimonials__item-title=item.name-->
+        <!--                                .testimonials__item-text=item.text-->
+        <!--            .testimonials__text Of course, none of these people actually said any of this, but we think they would. Signum City is all this, and more.-->
         <section class="laptop">
           <div class="container">
             <div class="laptop__wrapper">
@@ -200,12 +161,12 @@
         <footer class="footer">
           <div class="container">
             <div class="footer__wrapper">
-              <nav class="header__nav">
-                <ul class="header__ul">
-                  <li class="header__li"><a class="header__link" href="#">Start Page</a></li>
-                  <li class="header__li"><a class="header__link" href="#">About Us</a></li>
-                  <li class="header__li"><a class="header__link" href="#">Easy Money</a></li>
-                  <li class="header__li"><a class="header__link" href="#">Testimonials</a></li>
+              <nav class="footer__nav">
+                <ul class="footer__ul">
+                  <li class="footer__li"><a class="footer__link" href="#">Start Page</a></li>
+                  <li class="footer__li"><a class="footer__link" href="#">About Us</a></li>
+                  <li class="footer__li"><a class="footer__link" href="#">Easy Money</a></li>
+                  <li class="footer__li"><a class="footer__link" href="#">Testimonials</a></li>
                 </ul>
               </nav>
               <div class="socials footer-soc"><a class="socials__link" href=""><img src="img/svg/twitter.svg"></a><a class="socials__link" href=""><img src="img/svg/facebook.svg"></a><a class="socials__link" href=""><img src="img/svg/insta.svg"></a><a class="socials__link" href=""><img src="img/svg/ufo.svg"></a></div>
