Adaptive is done

--- a/app/home.html
+++ b/app/home.html
@@ -42,7 +42,7 @@
         <header class="header">
           <div class="container">
             <div class="header__wrapper">
-              <div class="header__logo"><a class="header__link" href="#"><img src="img/svg/logo.svg"></a>
+              <div class="header__logo"><a class="header__link" href="#"><img src="img/svg/Logo.svg"></a>
                 <div class="header__menu"><img src="img/svg/Menu.svg"></div>
               </div>
               <nav class="header__nav">
@@ -127,21 +127,62 @@
             </div>
           </div>
         </section>
-        <!--section.testimonials-->
-        <!--    .container-->
-        <!--        .testimonials__wrapper-->
-        <!--            h1.testimonials__h1 Testimonials-->
-        <!--            .testimonials__title Don't believe us? Well listen to our beta testers:-->
-        <!--            .testimonials__items-->
-        <!--                each item in links-->
-        <!--                    .testimonials__items-outer-->
-        <!--                        .testimonials__item-->
-        <!--                            .testimonials__item-img-->
-        <!--                                img(src=item.img)-->
-        <!--                            .testimonials__item-texts-->
-        <!--                                .testimonials__item-title=item.name-->
-        <!--                                .testimonials__item-text=item.text-->
-        <!--            .testimonials__text Of course, none of these people actually said any of this, but we think they would. Signum City is all this, and more.-->
+        <section class="testimonials">
+          <div class="container">
+            <div class="testimonials__wrapper">
+              <h1 class="testimonials__h1">Testimonials</h1>
+              <div class="testimonials__title">Don't believe us?<span> Well listen to our beta testers:</span></div>
+              <div class="testimonials__items">
+                <div class="testimonials__items-outer">
+                  <div class="testimonials__item">
+                    <div class="testimonials__item-img"><img src="img/svg/Hamilton.svg"></div>
+                    <div class="testimonials__item-texts">
+                      <div class="testimonials__item-title">Alexander Hamilton</div>
+                      <div class="testimonials__item-text">Signum City was easy to play, easy to sign up, and they aren't trying to sell me anything, -ever. It is the funnest way to get money for college</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="testimonials__items-outer">
+                  <div class="testimonials__item">
+                    <div class="testimonials__item-img"><img src="img/svg/Buddha.svg"></div>
+                    <div class="testimonials__item-texts">
+                      <div class="testimonials__item-title">Buddha</div>
+                      <div class="testimonials__item-text">Getting scholarship money doesn't have to be suffering, Signum City makes it fun to win scholarships with your friends.</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="testimonials__items-outer">
+                  <div class="testimonials__item">
+                    <div class="testimonials__item-img"><img src="img/svg/Polo.svg"></div>
+                    <div class="testimonials__item-texts">
+                      <div class="testimonials__item-title">Marco Polo</div>
+                      <div class="testimonials__item-text">No need to travel and beg for college money, just sign up for Signum City and start playing now!</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="testimonials__items-outer">
+                  <div class="testimonials__item">
+                    <div class="testimonials__item-img"><img src="img/svg/Peter.svg"></div>
+                    <div class="testimonials__item-texts">
+                      <div class="testimonials__item-title">Saint Peter</div>
+                      <div class="testimonials__item-text">For the love of all things holy, Signum City is making it actually exciting and fun to win scholarship money for college.</div>
+                    </div>
+                  </div>
+                </div>
+                <div class="testimonials__items-outer">
+                  <div class="testimonials__item">
+                    <div class="testimonials__item-img"><img src="img/svg/Peter2.svg"></div>
+                    <div class="testimonials__item-texts">
+                      <div class="testimonials__item-title">Saint Peter</div>
+                      <div class="testimonials__item-text">For the love of all things holy, Signum City is making it actually exciting and fun to win scholarship money for college.</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="testimonials__text">Of course, none of these people actually said any of this, but we think they would. Signum City is all this, and more.</div>
+            </div>
+          </div>
+        </section>
         <section class="laptop">
           <div class="container">
             <div class="laptop__wrapper">
