Adaptive and hovers is done

--- a/app/home.html
+++ b/app/home.html
@@ -209,10 +209,7 @@
                 <div class="laptop__texts-text">Please don’t make us beg, although<span> we’re not beneath that.</span></div>
                 <div class="laptop__texts-text-second">You know you want those $10,000 virtual dollars.</div>
                 <form class="laptop__form" id="laptop__form">
-                  <input type="hidden" name="project_name" value="Site Name">
-                  <input type="hidden" name="admin_email" value="admin@mail.com">
-                  <input type="hidden" name="form_subject" value="Form Subject">
-                  <input class="laptop__form-input" type="text" name="E-mail" placeholder="You E-mail..." required="">
+                  <input class="laptop__form-input" type="text" placeholder="Email" required="">
                   <button class="laptop__form-btn">JOIN the Wait List</button>
                 </form>
               </div>
