--- a/app/home.html
+++ b/app/home.html
@@ -253,7 +253,32 @@
                     <path d="M26.7147 17.1361C26.6706 15.9119 25.6698 14.956 24.4741 14.9976C23.9443 15.0165 23.4402 15.2394 23.0576 15.6134C21.3725 14.4346 19.3931 13.7885 17.3585 13.7432L18.3188 9.00139L21.4866 9.68526C21.5749 10.5203 22.3033 11.1248 23.1164 11.0341C23.9296 10.9434 24.5182 10.1953 24.4299 9.36032C24.3416 8.52532 23.6131 7.92079 22.8 8.01147C22.3328 8.06059 21.9133 8.34018 21.6816 8.7558L18.0538 8.01147C17.8073 7.95479 17.5608 8.11348 17.5056 8.37041C17.5056 8.37419 17.5056 8.37419 17.5056 8.37796L16.4129 13.6525C14.3526 13.6865 12.3474 14.3364 10.6402 15.5227C9.77194 14.684 8.40327 14.7255 7.58648 15.621C6.7697 16.5127 6.81017 17.9182 7.68214 18.757C7.85139 18.9194 8.04639 19.0592 8.26346 19.1575C8.24874 19.3804 8.24874 19.6033 8.26346 19.8262C8.26346 23.2305 12.1266 26 16.8912 26C21.6558 26 25.519 23.2343 25.519 19.8262C25.5337 19.6033 25.5337 19.3804 25.519 19.1575C26.2622 18.7759 26.7294 17.99 26.7147 17.1361ZM11.9132 18.6587C11.9132 17.82 12.5792 17.1361 13.396 17.1361C14.2127 17.1361 14.8787 17.82 14.8787 18.6587C14.8787 19.4975 14.2127 20.1814 13.396 20.1814C12.5755 20.1738 11.9132 19.4975 11.9132 18.6587ZM20.5116 22.898C19.4593 23.7103 18.1716 24.0655 16.8544 24.0088C15.5373 24.0655 14.2495 23.6499 13.1973 22.8376C13.0575 22.6638 13.0832 22.403 13.2525 22.2595C13.3996 22.1348 13.6094 22.1348 13.7602 22.2595C14.6506 22.9282 15.7359 23.2683 16.8397 23.2154C17.9435 23.2758 19.0325 22.9509 19.9339 22.2897C20.0958 22.1272 20.3607 22.131 20.5189 22.2973C20.6771 22.4635 20.6734 22.7355 20.5116 22.898ZM20.2356 20.291C19.4188 20.291 18.7639 19.5504 18.7639 18.7116C18.7639 17.8729 19.4299 17.189 20.2467 17.189C21.0634 17.189 21.7294 17.8729 21.7294 18.7116C21.7625 19.5504 21.126 20.257 20.3092 20.291C20.2835 20.291 20.2614 20.291 20.2356 20.291Z" fill="white"></path>
                     <circle cx="17" cy="17" r="16.5" stroke="white"></circle>
                   </svg></a></div>
-              <div class="copyright">© 2019 All Rights Reserved</div><a class="btn-up" href="header"><img src="img/svg/btn-up.svg"></a>
+              <div class="copyright">© 2019 All Rights Reserved</div><a class="btn-up" href="header">
+                <svg width="74" height="73" viewBox="0 0 74 73" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g filter="url(#filter0_d)">
+                    <ellipse cx="32" cy="31.3854" rx="27" ry="26.3854" fill="url(#paint0_linear)"></ellipse>
+                  </g>
+                  <path d="M33.0607 17.9393C32.4749 17.3536 31.5251 17.3536 30.9393 17.9393L21.3934 27.4853C20.8076 28.0711 20.8076 29.0208 21.3934 29.6066C21.9792 30.1924 22.9289 30.1924 23.5147 29.6066L32 21.1213L40.4853 29.6066C41.0711 30.1924 42.0208 30.1924 42.6066 29.6066C43.1924 29.0208 43.1924 28.0711 42.6066 27.4853L33.0607 17.9393ZM33.5 43L33.5 19L30.5 19L30.5 43L33.5 43Z" fill="white"></path>
+                  <defs>
+                    <filter id="filter0_d" x="0" y="0" width="74" height="72.7708" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                      <feflood flood-opacity="0" result="BackgroundImageFix"></feflood>
+                      <fecolormatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"></fecolormatrix>
+                      <feoffset dx="5" dy="5"></feoffset>
+                      <fegaussianblur stdDeviation="5"></fegaussianblur>
+                      <fecolormatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"></fecolormatrix>
+                      <feblend mode="multiply" in2="BackgroundImageFix" result="effect1_dropShadow"></feblend>
+                      <feblend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"></feblend>
+                    </filter>
+                    <lineargradient id="paint0_linear" x1="5.22925" y1="31" x2="59" y2="31" gradientUnits="userSpaceOnUse">
+                      <stop offset="2.06961e-10" stop-color="#F86544"></stop>
+                      <stop offset="1" stop-color="#D83B17"></stop>
+                    </lineargradient>
+                    <lineargradient id="paint_linear" x1="5.22925" y1="31" x2="59" y2="31" gradientUnits="userSpaceOnUse">
+                      <stop offset="2.06961e-10" stop-color="#FF8A6F"></stop>
+                      <stop offset="1" stop-color="#E26447"></stop>
+                    </lineargradient>
+                  </defs>
+                </svg></a>
             </div>
           </div>
         </footer>
