--- a/app/home.html
+++ b/app/home.html
@@ -72,7 +72,7 @@
             </div>
             <div class="header__wrapper-mob">
               <div class="header__mob">
-                <div class="header__logo-mob"><a class="header-mob__link" href="#"><img src="img/svg/logo.svg"></a>
+                <div class="header__logo-mob"><a class="header-mob__link" href="#"><img src="img/svg/Logo.svg"></a>
                   <div class="header-mob__link_close"><img src="img/svg/Close.svg"></div>
                 </div>
                 <nav class="header__mob-nav">
@@ -90,24 +90,21 @@
                 <h1 class="people__h1">Play the Virtual<br>Stock Market<br>Win College Money</h1>
                 <h2 class="people__h2">  Win scholarship money or loan repayment Beginning May 2019, 100% Free - no catch</h2>
                 <h3 class="people__h3"> Education is expensive. We want to help. Join the wait list and get 10,000 virtual dollars in your trading account.</h3>
-                <form class="header__form">
-                  <input type="hidden" name="project_name" value="SignumCitt">
-                  <input type="hidden" name="admin_email" value="sashaburlachenkon@gmail.com">
-                  <input type="hidden" name="form_subject" value="With header form">
-                  <input class="header__form-input" type="email" placeholder="Email">
+                <form class="header__form form-send-people">
+                  <input class="header__form-input" type="text" Email name="email">
                   <button class="header__form-btn" type="submit">JOIN the Wait List</button>
                 </form>
                 <p class="people__text">We don’t spam you, but will alert you when starting awesome contests</p>
               </div>
-              <div class="people__img"><img src="img/svg/People-with-money.svg"></div>
+              <div class="people__img wow slideInRight" data-wow-duration="1s" data-wow-delay="0.2s"><img src="img/svg/People-with-money.svg"></div>
             </div>
           </div>
         </header>
         <section class="about">
           <div class="container">
             <div class="about__wrapper">
-              <div class="about__img"><img src="img/svg/People-with-light.svg"></div>
-              <div class="about__outer">
+              <div class="about__img"><img class="wow slideInLeft" src="img/svg/People-with-light.svg" data-wow-duration="1.5s" data-wow-delay="0" data-wow-offset="300"></div>
+              <div class="about__outer wow fadeIn" data-wow-duration="0.7s" data-wow-delay="0" data-wow-offset="300">
                 <div class="about__title">About us</div>
                 <p class="about__text">We're a bunch of fintech coders who think you should be able to play with fake money to win real money for college. And we figured out how to do that with sponsored contests.</p>
                 <p class="about__text">We aim to create the largest ongoing scholarship giveaway in history.</p>
@@ -118,26 +115,26 @@
         <section class="easy-money">
           <div class="container">
             <div class="easy-money__wrapper">
-              <h1 class="easy-money__title">Easy Money</h1>
+              <h1 class="easy-money__title wow fadeIn" data-wow-duration="0.3s" data-wow-delay="0">Easy Money</h1>
               <div class="easy-money__item-outer">
-                <div class="easy-money__item"><img src="img/svg/Sing-up.svg">
+                <div class="easy-money__item wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s"><img src="img/svg/Sing-up.svg">
                   <div class="easy-money__item-title">Sign Up</div>
                   <div class="easy-money__item-text">Only your name, email and screen name, we never “Facebook” you</div>
                 </div>
-                <div class="easy-money__item"><img src="img/svg/Play.svg">
+                <div class="easy-money__item wow fadeInUp" data-wow-duration="0.3s" data-wow-delay="0"><img src="img/svg/Play.svg">
                   <div class="easy-money__item-title">Play</div>
                   <div class="easy-money__item-text">Unleash your inner Warren Buffet playing our dynamic games</div>
                 </div>
-                <div class="easy-money__item"><img src="img/svg/Win.svg">
+                <div class="easy-money__item wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s"><img src="img/svg/Win.svg">
                   <div class="easy-money__item-title">Win</div>
                   <div class="easy-money__item-text">Tell us where to send the “crap tons” of money if you wi</div>
                 </div>
               </div>
               <div class="easy-money__form">
-                <h2 class="easy-money__form-h2">No boring scholarship essay!<br>Play stock investing games to win!</h2>
-                <div class="easy__form-outer">
-                  <form class="easy__form">
-                    <input class="easy__form-input" type="email" placeholder="Email">
+                <h2 class="easy-money__form-h2 wow slideInLeft" data-wow-duration="1s" data-wow-delay="0">No boring scholarship essay!<br>Play stock investing games to win!</h2>
+                <div class="easy__form-outer wow fadeInUp" data-wow-duration="1s" data-wow-delay="0">
+                  <form class="easy__form form-send-easy">
+                    <input class="easy__form-input" type="text" placeholder="Email" name="email">
                     <button class="easy__form-btn" type="submit">JOIN the Wait List</button>
                   </form>
                   <p class="easy__form-text">Hmm, still considering joining? We promise that we don’t bite, and we’ve had all our shots.</p>
@@ -149,9 +146,9 @@
         <section class="testimonials">
           <div class="container">
             <div class="testimonials__wrapper">
-              <h1 class="testimonials__h1">Testimonials</h1>
-              <div class="testimonials__title">Don't believe us?<span>  Well listen to our beta testers:</span></div>
-              <div class="testimonials__items">
+              <h1 class="testimonials__h1 wow fadeIn" data-wow-duration="0.5s" data-wow-delay="0">Testimonials</h1>
+              <div class="testimonials__title wow fadeIn" data-wow-duration="0.5s" data-wow-delay="0">Don't believe us?<span>  Well listen to our beta testers:</span></div>
+              <div class="testimonials__items wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0">
                 <div class="testimonials__items-outer">
                   <div class="testimonials__item">
                     <div class="testimonials__item-img"><img src="img/svg/Hamilton.svg"></div>
@@ -198,30 +195,29 @@
                   </div>
                 </div>
               </div>
-              <div class="testimonials__text">Of course, none of these people actually said any of this, but we think they would. Signum City is all this, and more.</div>
+              <div class="testimonials__text wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0" data-wow-offset="490">Of course, none of these people actually said any of this, but we think they would. Signum City is all this, and more.</div>
             </div>
           </div>
         </section>
         <section class="laptop">
           <div class="container">
             <div class="laptop__wrapper">
-              <div class="laptop__texts">
+              <div class="laptop__texts wow slideInLeft" data-wow-duration="0.7s" data-wow-delay="0" data-wow-offset="490">
                 <div class="laptop__texts-text">Please don’t make us beg, although<span> we’re not beneath that.</span></div>
                 <div class="laptop__texts-text-second">You know you want those $10,000 virtual dollars.</div>
-                <form class="laptop__form" id="laptop__form">
-                  <input class="laptop__form-input" type="text" placeholder="Email" required="">
+                <form class="laptop__form form-send-laptop">
+                  <input class="laptop__form-input" type="text" placeholder="Email" name="email">
                   <button class="laptop__form-btn">JOIN the Wait List</button>
                 </form>
               </div>
+              <div class="laptop__back wow slideInRight" data-wow-duration="0.7s" data-wow-delay="0" data-wow-offset="490"><img src="img/Saignum_laptop.png"></div>
             </div>
           </div>
         </section>
-        <div class="popap">
-          <div class="congrats">
-            <div class="congrats__img"><img src="img/svg/Congrats.svg"></div>
-            <p class="congrats__text">Congrats!<span>You are now оn the Wait List!</span></p>
-            <button> Hurray!</button>
-          </div>
+        <div class="congrats">
+          <div class="congrats__img"><img src="img/svg/Congrats.svg"></div>
+          <p class="congrats__text">Congrats!<span>You are now оn the Wait List!</span></p>
+          <button id="congrats-close"> Hurray!</button>
         </div>
       </div>
       <div class="footer-wrapper" id="footerWrapper">
