--- a/app/home.html
+++ b/app/home.html
@@ -39,7 +39,7 @@
     </div>
     <div class="content-wrapper" id="contentWrapper">
       <div class="page-wrapper" id="pageWrapper">
-        <header class="header">
+        <header class="header" id="header">
           <div class="container">
             <div class="header__wrapper">
               <div class="header__logo"><a class="header__link" href="#"><img src="img/svg/Logo.svg"></a>
@@ -47,9 +47,9 @@
               </div>
               <nav class="header__nav">
                 <ul class="header__ul">
-                  <li class="header__li"><a class="header__link" href="#">About Us</a></li>
-                  <li class="header__li"><a class="header__link" href="#">Easy Money</a></li>
-                  <li class="header__li"><a class="header__link" href="#">Testimonials</a></li>
+                  <li class="header__li"><a class="header__link" href="#about">About Us</a></li>
+                  <li class="header__li"><a class="header__link" href="#easy-money">Easy Money</a></li>
+                  <li class="header__li"><a class="header__link" href="#testimonials">Testimonials</a></li>
                 </ul>
               </nav>
               <div class="socials"><a class="socials__link" href="">
@@ -100,7 +100,7 @@
             </div>
           </div>
         </header>
-        <section class="about">
+        <section class="about" id="about">
           <div class="container">
             <div class="about__wrapper">
               <div class="about__img"><img class="wow slideInLeft" src="img/svg/People-with-light.svg" data-wow-duration="1.5s" data-wow-delay="0" data-wow-offset="300"></div>
@@ -112,7 +112,7 @@
             </div>
           </div>
         </section>
-        <section class="easy-money">
+        <section class="easy-money" id="easy-money">
           <div class="container">
             <div class="easy-money__wrapper">
               <h1 class="easy-money__title wow fadeIn" data-wow-duration="0.3s" data-wow-delay="0">Easy Money</h1>
@@ -143,7 +143,7 @@
             </div>
           </div>
         </section>
-        <section class="testimonials">
+        <section class="testimonials" id="testimonials">
           <div class="container">
             <div class="testimonials__wrapper">
               <h1 class="testimonials__h1 wow fadeIn" data-wow-duration="0.5s" data-wow-delay="0">Testimonials</h1>
@@ -195,14 +195,14 @@
                   </div>
                 </div>
               </div>
-              <div class="testimonials__text wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0" data-wow-offset="490">Of course, none of these people actually said any of this, but we think they would. Signum City is all this, and more.</div>
+              <div class="testimonials__text wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0">Of course, none of these people actually said any of this, but we think they would. Signum City is all this, and more.</div>
             </div>
           </div>
         </section>
-        <section class="laptop">
+        <section class="laptop" id="laptop">
           <div class="container">
             <div class="laptop__wrapper">
-              <div class="laptop__texts wow slideInLeft" data-wow-duration="0.7s" data-wow-delay="0" data-wow-offset="490">
+              <div class="laptop__texts wow slideInLeft" data-wow-duration="0.7s" data-wow-delay="0">
                 <div class="laptop__texts-text">Please don’t make us beg, although<span> we’re not beneath that.</span></div>
                 <div class="laptop__texts-text-second">You know you want those $10,000 virtual dollars.</div>
                 <form class="laptop__form form-send-laptop">
@@ -210,7 +210,7 @@
                   <button class="laptop__form-btn">JOIN the Wait List</button>
                 </form>
               </div>
-              <div class="laptop__back wow slideInRight" data-wow-duration="0.7s" data-wow-delay="0" data-wow-offset="490"><img src="img/Saignum_laptop.png"></div>
+              <div class="laptop__back wow slideInRight" data-wow-duration="0.7s" data-wow-delay="0"><img src="img/Saignum_laptop.png"></div>
             </div>
           </div>
         </section>
@@ -226,10 +226,10 @@
             <div class="footer__wrapper">
               <nav class="footer__nav">
                 <ul class="footer__ul">
-                  <li class="footer__li"><a class="footer__link" href="#">Start Page</a></li>
-                  <li class="footer__li"><a class="footer__link" href="#">About Us</a></li>
-                  <li class="footer__li"><a class="footer__link" href="#">Easy Money</a></li>
-                  <li class="footer__li"><a class="footer__link" href="#">Testimonials</a></li>
+                  <li class="footer__li"><a class="footer__link" href="#header">Start Page</a></li>
+                  <li class="footer__li"><a class="footer__link" href="#about">About Us</a></li>
+                  <li class="footer__li"><a class="footer__link" href="#easy-money">Easy Money</a></li>
+                  <li class="footer__li"><a class="footer__link" href="#testimonials">Testimonials</a></li>
                 </ul>
               </nav>
               <div class="socials footer-soc"><a class="socials__link" href="">
