--- a/app/home.html
+++ b/app/home.html
@@ -77,9 +77,9 @@
                 </div>
                 <nav class="header__mob-nav">
                   <ul class="header__mob-ul">
-                    <li class="header__mob-li"><a class="header__mob-link" href="#">About Us</a></li>
-                    <li class="header__mob-li"><a class="header__mob-link" href="#">Easy Money</a></li>
-                    <li class="header__mob-li"><a class="header__mob-link" href="#">Testimonials</a></li>
+                    <li class="header__mob-li"><a class="header__mob-link" id="aboutLinkMob" href="#about">About Us</a></li>
+                    <li class="header__mob-li"><a class="header__mob-link" href="#easy-money">Easy Money</a></li>
+                    <li class="header__mob-li"><a class="header__mob-link" href="#testimonials">Testimonials</a></li>
                   </ul>
                   <div class="socials-mob"><a class="socials-mob__link" href=""><img src="img/svg/twitter.svg"></a><a class="socials-mob__link" href=""><img src="img/svg/facebook.svg"></a><a class="socials-mob__link" href=""><img src="img/svg/insta.svg"></a><a class="socials-mob__link" href=""><img src="img/svg/ufo.svg"></a></div>
                 </nav>
@@ -91,7 +91,7 @@
                 <h2 class="people__h2">  Win scholarship money or loan repayment Beginning May 2019, 100% Free - no catch</h2>
                 <h3 class="people__h3"> Education is expensive. We want to help. Join the wait list and get 10,000 virtual dollars in your trading account.</h3>
                 <form class="header__form form-send-people">
-                  <input class="header__form-input" type="text" Email name="email">
+                  <input class="header__form-input" autocomplete="off" type="text" placeholder="Email" name="email">
                   <button class="header__form-btn" type="submit">JOIN the Wait List</button>
                 </form>
                 <p class="people__text">We don’t spam you, but will alert you when starting awesome contests</p>
@@ -127,7 +127,7 @@
                 </div>
                 <div class="easy-money__item wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s"><img src="img/svg/Win.svg">
                   <div class="easy-money__item-title">Win</div>
-                  <div class="easy-money__item-text">Tell us where to send the “crap tons” of money if you wi</div>
+                  <div class="easy-money__item-text">Tell us where to send the “crap tons” of money if you win</div>
                 </div>
               </div>
               <div class="easy-money__form">
@@ -154,7 +154,7 @@
                     <div class="testimonials__item-img"><img src="img/svg/Hamilton.svg"></div>
                     <div class="testimonials__item-texts">
                       <div class="testimonials__item-title">Alexander Hamilton</div>
-                      <div class="testimonials__item-text">Signum City was easy to play, easy to sign up, and they aren't trying to sell me anything, -ever. It is the funnest way to get money for college</div>
+                      <div class="testimonials__item-text">Signum City was easy to play, easy to sign up, and they aren't trying to sell me anything, ever. It is the funnest way to get money for college.</div>
                     </div>
                   </div>
                 </div>
@@ -173,15 +173,6 @@
                     <div class="testimonials__item-texts">
                       <div class="testimonials__item-title">Marco Polo</div>
                       <div class="testimonials__item-text">No need to travel and beg for college money, just sign up for Signum City and start playing now!</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="testimonials__items-outer">
-                  <div class="testimonials__item">
-                    <div class="testimonials__item-img"><img src="img/svg/Peter.svg"></div>
-                    <div class="testimonials__item-texts">
-                      <div class="testimonials__item-title">Saint Peter</div>
-                      <div class="testimonials__item-text">For the love of all things holy, Signum City is making it actually exciting and fun to win scholarship money for college.</div>
                     </div>
                   </div>
                 </div>
@@ -227,7 +218,7 @@
               <nav class="footer__nav">
                 <ul class="footer__ul">
                   <li class="footer__li"><a class="footer__link" href="#header">Start Page</a></li>
-                  <li class="footer__li"><a class="footer__link" href="#about">About Us</a></li>
+                  <li class="footer__li"><a class="footer__link" id="aboutLink" href="#about">About Us</a></li>
                   <li class="footer__li"><a class="footer__link" href="#easy-money">Easy Money</a></li>
                   <li class="footer__li"><a class="footer__link" href="#testimonials">Testimonials</a></li>
                 </ul>
